kubernetes/apps/base/stirling-pdf/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirling-pdf.local`)
      kind: Rule
      services:
        - name: stirling-pdf
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: stirling-pdf-tls
